add swagger and fix code
